fixed-image-overflow-on-sm-screen

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -454,6 +454,10 @@
 
 @media screen and (max-width: 770px) {
 
+  .container {
+    max-width: 100%;
+  }
+
   .showcase { 
     flex-direction: column;
     justify-content: center;
@@ -497,9 +501,6 @@
 
 @media (max-width: 420px) {
 
-  img {
-    width: auto;
-  }
 
   .img-cont { 
     height: 50px;
@@ -528,6 +529,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .products-search-item img {
+    width: auto;
   }
 
 }
